--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,11 +4,26 @@
     "type": "split",
     "children": [
       {
-        "id": "a95c9a9b7f8e762b",
+        "id": "140c135505db02bf",
         "type": "leaf",
+        "dimension": 72.36519607843137,
+        "pinned": true,
         "state": {
           "type": "graph",
-          "state": {}
+          "state": {},
+          "pinned": true
+        }
+      },
+      {
+        "id": "fb84c7067b812858",
+        "type": "leaf",
+        "dimension": 27.63480392156863,
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "EDH/Vannifars Circus/CMC/3/Trinket Mage.md",
+            "mode": "source"
+          }
         }
       }
     ],
@@ -36,7 +51,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "kinnan",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -45,12 +60,11 @@
               }
             }
           }
-        ],
-        "currentTab": 1
+        ]
       }
     ],
     "direction": "horizontal",
-    "width": 257
+    "width": 226
   },
   "right": {
     "id": "98fbea0f15473c0d",
@@ -66,6 +80,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "EDH/Vannifars Circus/CMC/3/Trinket Mage.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -73,6 +88,39 @@
                 "searchQuery": "",
                 "backlinkCollapsed": false,
                 "unlinkedCollapsed": true
+              }
+            }
+          },
+          {
+            "id": "e249aa5e4247379b",
+            "type": "leaf",
+            "state": {
+              "type": "tag",
+              "state": {
+                "sortOrder": "frequency",
+                "useHierarchy": true
+              }
+            }
+          },
+          {
+            "id": "a8819ea6d7f0a677",
+            "type": "leaf",
+            "state": {
+              "type": "outgoing-link",
+              "state": {
+                "file": "EDH/Vannifars Circus/CMC/3/Trinket Mage.md",
+                "linksCollapsed": false,
+                "unlinkedCollapsed": true
+              }
+            }
+          },
+          {
+            "id": "937dfd54c6133240",
+            "type": "leaf",
+            "state": {
+              "type": "outline",
+              "state": {
+                "file": "EDH/Vannifars Circus/CMC/3/Trinket Mage.md"
               }
             }
           }
@@ -83,17 +131,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "a95c9a9b7f8e762b",
+  "active": "fb84c7067b812858",
   "lastOpenFiles": [
-    "EDH/Vannifars Circus/CMC/3/Pemmin's Aura.md",
-    "EDH/Vannifars Circus/CMC/2/Lightning Greaves.md",
-    "EDH/Vannifars Circus/CMC/1/Wirewood Symbiote.md",
-    "EDH/Vannifars Circus/CMC/6/Deadeye Navigator.md",
-    "EDH/Vannifars Circus/CMC/6/Experiment Kraj.md",
-    "EDH/Vannifars Circus/CMC/5/Willbreaker.md",
-    "EDH/Vannifars Circus/CMC/5/Teferi, Mage of Zhalfir.md",
-    "EDH/Vannifars Circus/CMC/5/Seedborn Muse.md",
-    "EDH/Vannifars Circus/CMC/5/Murkfield Liege.md",
-    "EDH/Vannifars Circus/CMC/5/Muldrifter.md"
+    "EDH/Vannifars Circus/CMC/3/Trinket Mage.md",
+    "EDH/Vannifars Circus/CMC/4/Prime Speaker Vannifar.md",
+    "Untitled.md",
+    "EDH/Vannifars Circus/CMC/2/Kinnan, Bonder Prodigy.md",
+    "EDH/Vannifars Circus/CMC/0/Urza's Saga.md",
+    "EDH/Vannifars Circus/CMC/3/Tribute Mage.md",
+    "EDH/Vannifars Circus/CMC/3/Spellseeker.md",
+    "EDH/Vannifars Circus/CMC/7/Sea Gate Restoration.md",
+    "Sideboard/Flooded Strand.md",
+    "EDH/Vannifars Circus/Sideboard/Flooded Strand.md"
   ]
 }
